Cascading Change Log

2.0.0 [unreleased]

  Added c.f.FlowStepStrategy interface to allow customization of c.f.p.FlowStep configuration information.

  Changed c.f.Flow to lazily test child source taps for modified time to reduce file meta-data queries.

  Changed c.t.CompositeTap#getChildTaps to return an j.u.Iterator to allow for lazy resolution of child tap instances.

  Added "cascading.default.comparator" property to allow for a default j.u.Comparator class to be set and used
  if no Comparator is returned by the c.t.Comparison interface or set on a c.t.Fields instance.
  See c.t.h.TupleSerialization for the static accessor.

  Changed planner to allow traps to be re-used across any branches. Prior planner would throw an error.

  Changed c.f.Flow to delete traps during the same conditions a sink will be deleted before execution.

  Fixed issue where the c.t.h.TemplateTap would not properly remove Hadoop temporary directories on completion.

  Changed the behavior of traps to capture operation argument values instead of all the incoming values so that it is
  simpler to identify the values causing the failure and reduce the data stored in the trap and log files, which
  record a truncated stringified version of the argument tuple.

  Updated c.f.h.MapReduceFlow to allow source/sink/trap create methods to be overridden by a sub-class in order
  to support path identifiers not compatible with the Hadoop FS.

  Changed c.f.FlowProcess increment methods to take a long instead of int type.

  Fixed issue where the c.t.h.TemplateTap would not properly handle pathFields value if set to c.f.Fields.ALL.

  Fixed issue where the c.p.a.AB.CompositeFunction was not getting flushed when planned into a reduce task.

  Renamed c.p.a.Shape to c.p.a.Retain, as it retains given fields, and created c.p.a.Discard to perform the opposite
  function or discarding given fields.

  Added c.o.NoOp operation to allow fields to be dropped from a stream when used with c.t.Fields.SWAP.
